# Depixelizing-Pixel-Art-on-GPUs

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.txt
shaders/: drawPixels.frag  quad_shader.vert
shaders/FullCellGraphConstruction/: FullCellGraphConstruction.geom  FullCellGraphConstruction.vert
shaders/FullCellGraphDrawing/: FullCellGraphDrawing.frag  FullCellGraphDrawing.geom  FullCellGraphDrawing.vert
shaders/GaussRasterizer/: GaussRasterizer.frag  GaussRasterizer.vert
shaders/Optimization/: OptimizeEnergy.vert
shaders/SimilarityGraph/: dissimilar.frag  drawGraph.frag  drawGraph.geom  drawGraph.vert  drawGraphNodes.vert  eliminateCrossings.frag  valenceUpdate.frag
shaders/UpdateCorrectedPositions/: UpdateCorrectedPositions.vert
shaders/VoronoiGraph/: dbgDrawVoronoiCellGraph3x3.geom  dbgDrawVoronoiCellOverlay.frag  dbgDrawVoronoiCellOverlay.geom  dbgDrawVoronoiCellOverlay.vert
src/: CellGraphBuilder.cpp  CellGraphBuilder.h  Drawable.h  GaussRasterizer.cpp  GaussRasterizer.h  Image.cpp  Image.h  PixelArtRenderer.cpp  PixelArtRenderer.h  Shader.cpp  Shader.h  SimilarityGraphBuilder.h  SimilarityGraphBuilderFS.cpp  SimilarityGraphBuilderFS.h  SimilarityGraphDebugToy.cpp  SimilarityGraphDebugToy.h  VoronoiCellGraph3x3.cpp  VoronoiCellGraph3x3.h  main.cpp  mainpage.dox
